# slack-lunch-menu-bot

./: README.md  main.py  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yml  env.sample
modules/: hooking.py
utils/: check_date.py  logger.py  settings.py
